--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: net6app
-  description: An example of a net6 application.
+  description: An example of a net6 application made.
   # Example for optional annotations
   # annotations:
   #   github.com/project-slug: backstage/backstage
