--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,10 +3,8 @@ kind: Component
 metadata:
   name: net6app
   description: An example of a net6 application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  annotations:
+    backstage.io/kubernetes-id: net6app
 spec:
   type: website
   owner: izasahmedl@gmail.com
