--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,7 @@ metadata:
   description: An example of a net6 application.
   annotations:
     backstage.io/kubernetes-id: net6app
+    backstage.io/kubernetes-namespace: net6app
 spec:
   type: website
   owner: izasahmedl@gmail.com
