--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     backstage.io/kubernetes-id: net6app
     backstage.io/kubernetes-namespace: net6app
+    backstage.io/kubernetes-label-selector: 'app=izas'
 spec:
   type: service
   owner: izasahmedl@gmail.com
