--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: net6app
   description: An example of a net6 application.
   annotations:
-    backstage.io/kubernetes-label-selector: 'app=net6app'
+    backstage.io/kubernetes-label-selector: 'app=net6app,env=dev'
 spec:
   type: service
   owner: izasahmedl@gmail.com
